syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/riad/simple_auth/src/grpc/pb";

message User {
    string full_name = 1;
    string email = 2;
    string status = 3;
    google.protobuf.Timestamp password_changed_at = 4;
    google.protobuf.Timestamp created_at = 5;
}